Cambiando el estado de los productos

--- a/src/app/components/item/item.component.css
+++ b/src/app/components/item/item.component.css
@@ -2,3 +2,8 @@
     display:flex;
     justify-content: space-around;
 }
+
+.completed{
+    color: aquamarine;
+    text-decoration: line-through;
+}
