--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row" [ngClass]="{'completed': item.completed}">
     <div>
-        <input type="checkbox" [checked]="item.completed">
+        <input type="checkbox" [checked]="item.completed" (change)="onToggle(item)">
         {{item.title}}
     </div>
     <div>{{item.price | currency}}</div>
