--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <div>
   <app-header></app-header>
-
-  <app-items></app-items>
+  <router-outlet></router-outlet>
 </div>
