--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<menu>
+    <ul>
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/add">Nuevo</a></li>
+    </ul>
+</menu>
