--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -1,5 +1,5 @@
-<div>
-    <app-total mensaje="Total por pagar: " [total] = 'total'></app-total>
+<app-total mensaje="Total por pagar: " [total] = 'total'></app-total>
+<div class="container-items">
     <app-item 
     *ngFor="let item of items" 
     [item]="item"
