--- a/src/app/components/additem/additem.component.html
+++ b/src/app/components/additem/additem.component.html
@@ -1,25 +1,25 @@
-<form (ngSubmit)="onSubmit()">
+<form class='form-container' (ngSubmit)="onSubmit()">
     <h2>Registrar un nuevo artículo</h2>
 
-    <div>
+    <div class="form-content">
         <label for="id">Id del Artículo</label>    
         <input type="text" name="id" id="" [(ngModel)]="id">  
     </div>
 
-    <div>
+    <div class="form-content">
         <label for="title">Nombre del Artículo</label>    
         <input type="text" name="title" id="" [(ngModel)]="title">  
     </div>
     
-    <div>
+    <div class="form-content">
         <label for="">Precio</label>
         <input type="text" name="price" id="" [(ngModel)]="price">
     </div>
     
-    <div>
+    <div class="form-content">
         <label for="">Cantidad</label>
         <input type="text" name="quantity" id="" [(ngModel)]="quantity">
     </div>
     
-    <input type="submit" value="Crear">
+    <input class='button-create' type="submit" value="Crear">
 </form>
