--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,16 @@
-<menu>
-    <ul>
-        <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/add">Nuevo</a></li>
-    </ul>
-</menu>
+<header>
+    <div class="banner-title">
+        <h1>Shopping List</h1>
+    </div>
+    <div class="container-button">
+        
+        <a routerLink="/" class="button">
+                <img src="../../../assets/home.png" alt="home">  
+                Home
+        </a>
+        <a routerLink="/add" class="button">
+            <img src="../../../assets/add.png" alt="add"> 
+            Nuevo
+        </a>
+    </div>
+</header>
